[package]
name = "scx_cluster"
version = "1.0.0"
authors = ["scx_cluster"]
edition = "2021"
description = "A cluster-aware sched_ext scheduler based on scx_bpfland that evenly distributes processes across LLC clusters."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
clap = { version = "4.1", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam = "0.8.4"
libbpf-rs = "=0.25.0-beta.1"
log = "0.4.17"
scx_stats = { path = "../../../rust/scx_stats", version = "1.0.9" }
scx_stats_derive = { path = "../../../rust/scx_stats/scx_stats_derive", version = "1.0.9" }
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.11", features = ["autopower"] }
serde = { version = "1.0.215", features = ["derive"] }
simplelog = "0.12"

[build-dependencies]
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.11" }

[features]
enable_backtrace = []
