[package]
name = "scx_kp"
version = "0.1.0"
authors = ["scx_kp"]
edition = "2021"
description = "Kunpeng-oriented scheduler based on scx_beerland baseline"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
libbpf-rs = "=0.26.1"
log = "0.4"
scx_utils = { path = "../../../rust/scx_utils", version = "1.1.0" }
simplelog = "0.12"

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.1.0" }

[features]
enable_backtrace = []
