[package]
name = "scx_redis"
version = "1.0.0"
authors = ["scx_redis"]
edition = "2021"
description = "sched_ext scheduler for redis-server: pinned main thread, per-group workers, metrics."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
libbpf-rs = "=0.26.1"
log = "0.4.17"
simplelog = "0.12"
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.26" }
procfs = "0.18"

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.0.27" }

[features]
enable_backtrace = []
