[package]
name = "scx_simple"
version = "1.0.0"
authors = ["scx_simple"]
edition = "2021"
description = "A simple sched_ext scheduler (Rust userspace + simple.bpf.c backend)."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
libbpf-rs = "=0.26.1"
log = "0.4.17"
simplelog = "0.12"
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.26" }
procfs = "0.18"

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.0.27" }

[features]
enable_backtrace = []

